# hpio

./: .gitignore  CLAUDE.md  CODING_GUIDELINES.md  CRASH_LOGGING_IMPLEMENTATION.md  LOGGING_DEVELOPER_GUIDE.md  README.md  be-payment-prompt.sh  cursor.json  fe-payment-prompt.sh
.github/workflows/: build.yml  release.yml
backend/: .env  .env.example  package-lock.json  package.json  tsconfig.json
backend/config/: config.json
backend/src/: server.ts
backend/src/config/: appConfig.ts  config.ts  logger.ts  tracing.ts
backend/src/controllers/: feedbackController.ts  fileController.ts  userController.ts
backend/src/middleware/: actualizeDataMiddleware.ts  authMiddleware.ts  errorMiddleware.ts
backend/src/migrations/: 20250715091753-add-recurrence-rule-to-series.ts  20251005143200-create-merchant-category-rule.ts  20251011000000-add-fcm-token-to-users.ts  20251019000000-create-transaction-notifications.ts  20251106230329-add-notification-timestamp-to-suggestions.ts  20251109203038-add-notification-preferences.ts  20251211000000-create-blog-posts.ts  (+1 more)
frontend/: README-ANDROID.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/.storybook/: preview.tsx  tsconfig.json
frontend/public/: robots.txt  sitemap.xml  test.html
frontend/src/: App.tsx  index.css  main.tsx
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: fcm.rs  lib.rs  notifications.rs
scripts/: bump-version.js
(+226 files in other folders)
